[package]
name = "easy-sockets"
version = "0.1.1"
edition = "2021"
description = "A crate aimed at simplifying the creation of socket protocols"
license = "MIT"
license-file = "LICENSE.md"

[dependencies]
anyhow = "1.0.87"
bincode = "1.3.3"
lazy_static = "1.5.0"
serde = {version="1.0.210", features=["derive"]}
tokio = {version="1.40.0", features=["full"]}
